--- a/backend/config/.env.example
+++ b/backend/config/.env.example
@@ -1,3 +1,3 @@
 DJANGO_DEBUG=on
 DJANGO_SECRET_KEY='super-secret-key'
-DATABASE_URL=postgres://USER:PASSWORD@HOST:PORT
+DATABASE_URL=postgres://USER:PASSWORD@HOST:PORT/NAME
